--- a/_posts/2015-05-05.markdown
+++ b/_posts/2015-05-05.markdown
@@ -9,7 +9,7 @@ image: /assets/article_images/2014-11-30-mediator_features/night-track.JPG
 
 What is lorem ipsum?
 
-They are nothing but random,jumbled,unpronounceable words arranged in paragraphs to fake an actual article.The main purpose of
+It's nothing but random,jumbled,unpronounceable words arranged in paragraphs to fake an actual article.The main purpose of
 using lorem ipsum is to focus more on the graphic element rather than the text. It also saves a lot of time for designers 
 as they need not write up text for their designs and can easily generate lorem ipsum from various generators available online.
 
@@ -20,4 +20,5 @@ they didnt look natural enough for the eye to look like an article. The Solution
 jumble them and there you go, you get natural looking senseless paragraph that can be used and yes! thats what they did.
 The book they used was written in 45BC by a roman philosopher named Marcus Tullius Cicero. He wrote a book called 
 De finibus bonorum et malorum ("On the ends of good and evil"). Lorem ipsum is derived from parts of his books discourse
-on hedonism. 
+on hedonism. But why specifically this book? Well,there is no answer to that, there had be some book from which words could
+be taken and jumbled.So this one was it!
